--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Teko:400,700" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
      <link href="StyleSheets/style.css" type="text/css" rel="stylesheet">
     <title>
-      Sherry Andre: UX/UI Design
+      Sherry Andre:  UX/UI Design
     </title>
   </head>
   <body>
@@ -25,13 +29,13 @@
           </a>
         </li>
         <li>
-          <a href="#Contact">
+          <a href="#contact">
             Contact
           </a>
         </li>
       </ul>
     </nav>
-    <div class="container"
+    <div class="container-fluid">
       <div class="row justify-content-md-center">
         <header>
           <h1 class="text">
@@ -47,23 +51,23 @@
 
       <div class="row">
         <div class="col-6">
-            <h2 id="Projects">
-              Projects
-            </h2>
-          </div>
-          <div class="col-6">
-            <ul>
-              <li>
-                X-Culture.org
-              </li>
-              <li>
-                ABC Grocery
-              </li>
-              <li>
-                Bloom Box
-              </li>
-            </ul>
-          </div>
+          <h2 id="Projects">
+            Projects
+          </h2>
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>
+              X-Culture.org
+            </li>
+            <li>
+              ABC Grocery
+            </li>
+            <li>
+              Bloom Box
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div class="row">
@@ -72,45 +76,46 @@
             Skills
           </h2>
         </div>
-      <div class="col-6">
-        <div class="row">
-          <div class="col-6">
-              <ul>
-                <li>
-                  Sketch
-                </li>
-                <li>
-                  Google Sprints
-                </li>
-                <li>
-                  Usability Testing
-                </li>
-                <li>
-                  User Interviewing
-                </li>
-                <li>
-                  Analytical
-                </li>
-              </ul>
-            </div>
+        <div class="col-6">
+          <div class="row">
             <div class="col-6">
-              <ul>
-                <li>
-                  UX/UI Design
-                </li>
-                <li>
-                  Photoshop
-                </li>
-                <li>
-                  Curriculum Design
-                </li>
-                <li>
-                  Team-Based Learning
-                </li>
-                <li>
-                  Microsoft Office
-                </li>
-              </ul>
+                <ul>
+                  <li>
+                    Sketch
+                  </li>
+                  <li>
+                    Google Sprints
+                  </li>
+                  <li>
+                    Usability Testing
+                  </li>
+                  <li>
+                    User Interviewing
+                  </li>
+                  <li>
+                    Analytical
+                  </li>
+                </ul>
+              </div>
+              <div class="col-6">
+                <ul>
+                  <li>
+                    UX/UI Design
+                  </li>
+                  <li>
+                    Photoshop
+                  </li>
+                  <li>
+                    Curriculum Design
+                  </li>
+                  <li>
+                    Team-Based Learning
+                  </li>
+                  <li>
+                    Microsoft Office
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -126,10 +131,12 @@
               <div class="col-4">
                 <i class="fa fa-quote-left text-center">
                 </i>
+              </div>
               <div class="col-4">
                 <p>
                   This space needs to be completed.
                 </p>
+              </div>
               <div class="col-4">
                 <i class="fa fa-quote-right text-center">
                 </i>
@@ -137,58 +144,51 @@
             </div>
           </div>
         </div>
-        </div>
-        </div>
-        <link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
-       	<link href="https://fonts.googleapis.com/css?family=Teko:400,700" rel="stylesheet">
-       	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-<div class="RowHeight justify-content-md-center my-auto">
-    <section id="contact">
-  			<div class="section-content">
-  			</div>
-  			<div class="contact-section">
-    			<div class="container">
-            <div class="row">
+
+    <!-- <div class="RowHeight justify-content-md-center my-auto"> -->
+    <div class="row">
+      <section id="contact">
+  			<!-- <div class="contact-section"> -->
+    			<!-- <div class="container"> -->
+          <div class="row">
 
             <div class="col-md-6 form-line">
-    				  <form id="Contact">
+    				  <form>
                 <h1 class="section-header my-auto col-md-6">
-                  <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> I look forward to hearing from you!
+                  <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">
+                    I look forward to hearing from you!
                   </span>
                 </h1>
-                <h2 class="section-header my-auto col-md-6">
-                  Contact
-                </h2>
-    			  			<div class="form-group">
-    			  				<label for="exampleInputUsername">Your name</label>
-    					    	<input type="text" class="form-control" id="" placeholder=" Enter Name">
-    				  		</div>
-    				  		<div class="form-group">
-    					    	<label for="exampleInputEmail">Email Address</label>
-    					    	<input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id">
-    					  	</div>
-    					  	<div class="form-group">
-    					    	<label for="telephone">Mobile No.</label>
-    					    	<input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
-    			  			</div>
+  			  			<div class="form-group">
+  			  				<label for="exampleInputUsername">Your name</label>
+  					    	<input type="text" class="form-control" id="" placeholder=" Enter Name">
+  				  		</div>
+  				  		<div class="form-group">
+  					    	<label for="exampleInputEmail">Email Address</label>
+  					    	<input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id">
+  					  	</div>
+  					  	<div class="form-group">
+  					    	<label for="telephone">Mobile No.</label>
+  					    	<input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
+  			  			</div>
+  			  			<div class="form-group">
+  			  				<label for ="description"> Message</label>
+  			  			 	<textarea  class="form-control" id="description" placeholder="Enter Your Message"></textarea>
+  			  			</div>
 
-      			  			<div class="form-group">
-      			  				<label for ="description"> Message</label>
-      			  			 	<textarea  class="form-control" id="description" placeholder="Enter Your Message"></textarea>
-      			  			</div>
-
-
-      			  				<button type="button" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
-
-
-                      </form>
-      					</div>
-                <div class="row col-md-6">
-
-                </div>
-    			  		</div>
-    			</div>
+			  				<button type="button" class="btn btn-default submit">
+                  <i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message
+                </button>
+              </form>
+  					</div>
+            <div class="col-md-6">
+              <h2 class="section-header my-auto col-md-6">
+                Contact
+              </h2>
+            </div>
+			  	</div>
+    			<!-- </div> -->
 </div>
     		</section>
       </div>
