--- a/index.html
+++ b/index.html
@@ -148,8 +148,14 @@
       <div class="row">
         <section id="contact">
 			<div class="section-content">
-				<h1 class="section-header">Get in <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Touch with us</span></h1>
-				<h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h3>
+				<h1 class="section-header">
+          <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">
+            CONTACT
+          </span>
+        </h1>
+				<h3>
+          I look forward to hearing from you!
+        </h3>
 			</div>
 			<div class="contact-section">
 			<div class="container">
@@ -161,11 +167,11 @@
 				  		</div>
 				  		<div class="form-group">
 					    	<label for="exampleInputEmail">Email Address</label>
-					    	<input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email id">
+					    	<input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email Address">
 					  	</div>
 					  	<div class="form-group">
-					    	<label for="telephone">Mobile No.</label>
-					    	<input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit mobile no.">
+					    	<label for="telephone">Phone Number</label>
+					    	<input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit Phone Number">
 			  			</div>
 			  		</div>
 			  		<div class="col-md-6">
