--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </title>
   </head>
   <body>
-    <nav class="sticky">
+    <nav class="navbar sticky-top navbar-light bg-faded">
+      <a class="navbar-brand" href="#"></a>
       <ul class="across">
         <li>
           <a href="#About">
@@ -48,14 +49,22 @@
           </h3>
         </header>
       </div>
+    </div>
 
-      <div class="row">
-        <div class="col-6">
+      <div class="parallax" id="Grass">
+        <h3>
+          Projects
+        </h3>
+      </div>
+
+
+      <div class="row Bamboo RowHeight">
+        <div class="col-6 my-auto center">
           <h2 id="Projects">
             Projects
           </h2>
         </div>
-        <div class="col-6">
+        <div class="col-6 my-auto">
           <ul>
             <li>
               X-Culture.org
@@ -70,7 +79,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row RowHeight NotepadUXUI">
         <div class="col-6">
           <h2 id="Skills">
             Skills
