--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
       </div>
     </div>
 
-      <div class="parallax" id="Grass">
-        <h3>
-          Projects
-        </h3>
+      <div class="row parallax" id="Grass">
+        <div class="my-auto mx-auto">
+          <p class="clear">
+            PROJECTS
+          </p>
+        </div>
       </div>
 
 
@@ -190,7 +192,12 @@
 			  			</div>
 			  			<div>
 
-			  				<button type="button" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
+			  				<button type="button"  class="btn btn-default submit text-center">
+                  <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
+
+                  Send Message
+
+                </button>
 			  			</div>
 
 					</div>
