--- a/index.html
+++ b/index.html
@@ -60,11 +60,31 @@
       </div>
 
 
-      <div class="row Bamboo RowHeight">
-        <div class="col-6 my-auto center">
-          <h2 id="Projects">
-            Projects
-          </h2>
+      <div class="row RowHeight">
+        <div class="col-4 my-auto mx-auto">
+          <div class="card" style="width: 18rem; border-width: 10px">
+            <img class="card-img-top" src="Images/BloomBoxHome.png" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-title pictureTitle">Home Screen Mockup</p>
+              <p class="card-text picture">Week 1 was the redisgn of an e-commerce flower delivery website based on a Google Sprint.</p>
+              <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            </div>
+          </div>
+          <br />
+          <!-- <div class="border my-auto"> -->
+            <div class="card" style="width: 18rem; border-width: 10px">
+              <img class="card-img-top" src="Images/PickPage.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-title pictureTitle">Simplified Selection Page</p>
+                <p class="card-text picture">Research led us to design a simplified ordering page with minimal decisions required.</p>
+              <div class="row my-auto mx-auto">
+                <div class="col-7 mx-auto">
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+              </div>
+            </div>
+          <!-- </div> -->
         </div>
         <div class="col-6 my-auto">
           <ul>
