--- a/index.html
+++ b/index.html
@@ -67,16 +67,47 @@
           <div class="card-body">
             <p class="card-title pictureTitle">Home Screen Mockup</p>
               <p class="card-text picture">Week 1 was the redisgn of an e-commerce flower delivery website based on a Google Sprint.</p>
+            </div>
+          </div>
+          <br / />
+          <div class="card" style="width: 18rem; border-width: 10px">
+            <img class="card-img-top" src="Images/PickPage.png" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-title pictureTitle">Simplified Selection Page</p>
+              <p class="card-text picture">Research led us to design a simplified ordering page with minimal decisions required.</p>
+            </div>
+          </div>
+          <br />
+            <div class="card" style="width: 18rem; border-width: 10px">
+              <img class="card-img-top" src="Images/DeliveryScreen.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-title pictureTitle">Delivery Form</p>
+                <p class="card-text picture">To maintain simplicity, the delivery address and billing screen were separated.</p>
+              <div class="row my-auto mx-auto">
+                <div class="col-7 mx-auto">
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+              </div>
+            </div>
+        </div>
+
+        <div class="col-4 my-auto mx-auto">
+          <div class="card" style="width: 18rem; border-width: 10px">
+            <img class="card-img-top" src="Images/Kit_Screen.png" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-title pictureTitle">Meal Kit Options</p>
+              <p class="card-text picture">Weeks 2-4 consisted of designing an e-commerce platform for ABC Grocery.  This included identifying a premium feature for the first version.</p>
               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
           </div>
           <br />
           <!-- <div class="border my-auto"> -->
             <div class="card" style="width: 18rem; border-width: 10px">
-              <img class="card-img-top" src="Images/PickPage.png" alt="Card image cap">
+              <img class="card-img-top" src="Images/Ready-to-Eat.png" alt="Card image cap">
             <div class="card-body">
-              <p class="card-title pictureTitle">Simplified Selection Page</p>
-                <p class="card-text picture">Research led us to design a simplified ordering page with minimal decisions required.</p>
+              <p class="card-title pictureTitle">Order Screen</p>
+                <p class="card-text picture">The ready-to-eat meal ordering screen was designed to mimic ABC's premium image. The wine pairing options received good reviews during preliminary prototype testing.</p>
               <div class="row my-auto mx-auto">
                 <div class="col-7 mx-auto">
                   <a href="#" class="btn btn-primary">Read More</a>
@@ -86,7 +117,39 @@
             </div>
           <!-- </div> -->
         </div>
-        <div class="col-6 my-auto">
+
+        <div class="col-4 my-auto mx-auto">
+          <div class="card" style="width: 18rem; border-width: 10px">
+            <img class="card-img-top" src="Images/X-Culture.png" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-title pictureTitle">X-Culture Home Screen</p>
+              <p class="card-text picture">Redesigned home screen for X-Culture.org. Simplified navigation for multiple stakeholders.</p>
+            </div>
+          </div>
+          <br / />
+          <!-- <div class="card" style="width: 18rem; border-width: 10px">
+            <img class="card-img-top" src="Images/BusinessPage.png" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-title pictureTitle">Business Page Header</p>
+              <p class="card-text picture">Utilized research to identify the top priorities of business leaders who may have an interest in partnering with X-Culture.</p>
+            </div>
+          </div>
+          <br /> -->
+            <div class="card" style="width: 18rem; border-width: 10px">
+              <img class="card-img-top" src="Images/Donate.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-title pictureTitle">Donation Page</p>
+                <p class="card-text picture">Redesigned the donation function. Placed content information on multiple screens to reduce the appearance of excessive content.</p>
+              <div class="row my-auto mx-auto">
+                <div class="col-7 mx-auto">
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+              </div>
+            </div>
+        </div>
+
+        <!-- <div class="col-6 my-auto">
           <ul>
             <li>
               X-Culture.org
@@ -98,7 +161,7 @@
               Bloom Box
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
 
       <div class="row RowHeight NotepadUXUI">
