--- a/index.html
+++ b/index.html
@@ -60,25 +60,23 @@
       </div>
 
 
-      <div class="row RowHeight">
-        <div class="col-4 my-auto mx-auto">
-          <div class="card" style="width: 18rem; border-width: 10px">
+      <div class="row RowHeight my-auto mx-auto">
+        <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
+          <div class="card border-width mb-2">
             <img class="card-img-top" src="Images/BloomBoxHome.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-title pictureTitle">Home Screen Mockup</p>
               <p class="card-text picture">Week 1 was the redisgn of an e-commerce flower delivery website based on a Google Sprint.</p>
             </div>
           </div>
-          <br / />
-          <div class="card" style="width: 18rem; border-width: 10px">
+          <div class="card border-width mb-2">
             <img class="card-img-top" src="Images/PickPage.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-title pictureTitle">Simplified Selection Page</p>
               <p class="card-text picture">Research led us to design a simplified ordering page with minimal decisions required.</p>
             </div>
           </div>
-          <br />
-            <div class="card" style="width: 18rem; border-width: 10px">
+            <div class="card border-width">
               <img class="card-img-top" src="Images/DeliveryScreen.png" alt="Card image cap">
             <div class="card-body">
               <p class="card-title pictureTitle">Delivery Form</p>
@@ -92,8 +90,8 @@
             </div>
         </div>
 
-        <div class="col-4 my-auto mx-auto">
-          <div class="card" style="width: 18rem; border-width: 10px">
+        <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
+          <div class="card border-width mb-2">
             <img class="card-img-top" src="Images/Kit_Screen.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-title pictureTitle">Meal Kit Options</p>
@@ -101,9 +99,8 @@
               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
           </div>
-          <br />
           <!-- <div class="border my-auto"> -->
-            <div class="card" style="width: 18rem; border-width: 10px">
+            <div class="card border-width">
               <img class="card-img-top" src="Images/Ready-to-Eat.png" alt="Card image cap">
             <div class="card-body">
               <p class="card-title pictureTitle">Order Screen</p>
@@ -118,15 +115,14 @@
           <!-- </div> -->
         </div>
 
-        <div class="col-4 my-auto mx-auto">
-          <div class="card" style="width: 18rem; border-width: 10px">
+        <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
+          <div class="card border-width mb-2">
             <img class="card-img-top" src="Images/X-Culture.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-title pictureTitle">X-Culture Home Screen</p>
               <p class="card-text picture">Redesigned home screen for X-Culture.org. Simplified navigation for multiple stakeholders.</p>
             </div>
           </div>
-          <br / />
           <!-- <div class="card" style="width: 18rem; border-width: 10px">
             <img class="card-img-top" src="Images/BusinessPage.png" alt="Card image cap">
           <div class="card-body">
@@ -135,7 +131,7 @@
             </div>
           </div>
           <br /> -->
-            <div class="card" style="width: 18rem; border-width: 10px">
+            <div class="card border-width">
               <img class="card-img-top" src="Images/Donate.png" alt="Card image cap">
             <div class="card-body">
               <p class="card-title pictureTitle">Donation Page</p>
@@ -148,20 +144,6 @@
               </div>
             </div>
         </div>
-
-        <!-- <div class="col-6 my-auto">
-          <ul>
-            <li>
-              X-Culture.org
-            </li>
-            <li>
-              ABC Grocery
-            </li>
-            <li>
-              Bloom Box
-            </li>
-          </ul>
-        </div> -->
       </div>
 
       <div class="row RowHeight NotepadUXUI">
