--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-      <div class="row parallax" id="Grass">
+      <div class="row parallax" id="NotepadUXUI">
         <div class="my-auto mx-auto">
           <p class="clear">
             PROJECTS
