--- a/index.html
+++ b/index.html
@@ -146,9 +146,60 @@
         </div>
       </div>
 
-      <div class="row RowHeight NotepadUXUI">
+      <div class="row parallax" id="Grass">
+          <div class="col-6 my-auto mx-auto">
+              <h2 class="text3" id="Skills">
+                Skills
+              </h2>
+          </div>
+          <div class="col-6 text4 my-auto mx-auto">
+            <div class="row">
+              <div class="col-6">
+                <ul>
+                  <li>
+                    Sketch
+                  </li>
+                  <li>
+                    Google Sprints
+                  </li>
+                  <li>
+                    Usability Testing
+                  </li>
+                  <li>
+                    User Interviewing
+                  </li>
+                  <li>
+                    Analytical
+                  </li>
+                </ul>
+              </div>
+              <div class="col-6">
+                <ul>
+                  <li>
+                    UX/UI Design
+                  </li>
+                  <li>
+                    Photoshop
+                  </li>
+                  <li>
+                    Curriculum Design
+                  </li>
+                  <li>
+                    Team-Based Learning
+                  </li>
+                  <li>
+                    Microsoft Office
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      <!-- <div class="row RowHeight">
         <div class="col-6">
-          <h2 id="Skills">
+          <h2 id="Old Skills">
             Skills
           </h2>
         </div>
@@ -194,28 +245,35 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="row">
-        <div class="col-6">
-          <h2 id="About">
+      <div class="row RowHeight">
+        <div class="col-12 col-md-6 my-auto mx-auto">
+          <h2 class="text3A" id="About">
             About
           </h2>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6 my-auto mx-auto">
           <div class="row">
-            <div class="col-4">
-              <i class="fa fa-quote-left text-center">
-              </i>
+            <div class="col-4 col-md-2">
+              <div style="font-size: 6rem">
+                <i class="fa fa-quote-left">
+                </i>
+              </div>
             </div>
-            <div class="col-4">
-              <p>
-                This space needs to be completed.
+            <div class="col-4 col-md-8">
+              <p class="text5">
+                I’ve worked within mutiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book, and left higher education to pursue a career in technology and UX/UI design.
+                <br />
+                <br />
+                I am a strong advocate for collaborative initiatives, education and team development.  I especially have a passion for the startup community.
               </p>
             </div>
-            <div class="col-4">
-              <i class="fa fa-quote-right text-center">
-              </i>
+            <div class="col-4 col-md-2 mt-auto">
+              <div style="font-size: 6rem;">
+                <i class="fa fa-quote-right">
+                </i>
+              </div>
             </div>
           </div>
         </div>
