--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       </div>
     </div>
 
-      <div class="row parallax" id="NotepadUXUI">
+      <div class="row parallax" id="Blue_Wall">
         <div class="my-auto mx-auto">
-          <p class="clear">
+          <p class="text3">
             PROJECTS
           </p>
         </div>
@@ -82,7 +82,7 @@
               <p class="card-title pictureTitle">Delivery Form</p>
                 <p class="card-text picture">To maintain simplicity, the delivery address and billing screen were separated.</p>
               <div class="row my-auto mx-auto">
-                <div class="col-7 mx-auto">
+                <div class="mx-auto">
                   <a href="#" class="btn btn-primary">Read More</a>
                 </div>
               </div>
@@ -106,7 +106,7 @@
               <p class="card-title pictureTitle">Order Screen</p>
                 <p class="card-text picture">The ready-to-eat meal ordering screen was designed to mimic ABC's premium image. The wine pairing options received good reviews during preliminary prototype testing.</p>
               <div class="row my-auto mx-auto">
-                <div class="col-7 mx-auto">
+                <div class="mx-auto">
                   <a href="#" class="btn btn-primary">Read More</a>
                 </div>
               </div>
@@ -137,8 +137,8 @@
               <p class="card-title pictureTitle">Donation Page</p>
                 <p class="card-text picture">Redesigned the donation function. Placed content information on multiple screens to reduce the appearance of excessive content.</p>
               <div class="row my-auto mx-auto">
-                <div class="col-7 mx-auto">
-                  <a href="#" class="btn btn-primary">Read More</a>
+                <div class="mx-auto">
+                  <a href="https://medium.com/@sherryandre/learning-lessons-obtained-during-a-4-week-make-that-5-week-ux-ui-design-project-3d675aa04f9c" target="blank"class="btn btn-primary">Read More</a>
                 </div>
               </div>
               </div>
