--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-      <div class="row parallax" id="Blue_Wall">
+      <div class="row parallax" id="Phone">
         <div class="my-auto mx-auto">
           <p class="text3">
             PROJECTS
@@ -62,46 +62,50 @@
 
       <div class="row RowHeight my-auto mx-auto">
         <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
-          <div class="card border-width mb-2">
+          <!-- <div class="card border-width mb-2">
             <img class="card-img-top" src="Images/BloomBoxHome.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-title pictureTitle">Home Screen Mockup</p>
               <p class="card-text picture">Week 1 was the redisgn of an e-commerce flower delivery website based on a Google Sprint.</p>
             </div>
-          </div>
-          <div class="card border-width mb-2">
+          </div> -->
+          <!-- <div class="card border-width mb-2">
             <img class="card-img-top" src="Images/PickPage.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-title pictureTitle">Simplified Selection Page</p>
               <p class="card-text picture">Research led us to design a simplified ordering page with minimal decisions required.</p>
             </div>
-          </div>
+          </div> -->
             <div class="card border-width">
-              <img class="card-img-top" src="Images/DeliveryScreen.png" alt="Card image cap">
-            <div class="card-body">
-              <p class="card-title pictureTitle">Delivery Form</p>
-                <p class="card-text picture">To maintain simplicity, the delivery address and billing screen were separated.</p>
-              <div class="row my-auto mx-auto">
+              <img class="card-img-top" src="Images/BBv2.png" alt="Card image cap">
+                <div class="card-body">
+              <!-- <p class="card-title pictureTitle">Delivery</p> -->
+                  <p class="card-text picture">First team design project completed during an Ironhack UX/UI bootcamp.  The design structure was developed from the use of a Gooble Design Sprint.</p>
+                <div class="row my-auto mx-auto">
                 <div class="mx-auto">
-                  <a href="#" class="btn btn-primary">Read More</a>
+                  <a href="#" class="btn btn-primary Readbtn">Read More</a>
                 </div>
               </div>
-              </div>
             </div>
+          </div>
         </div>
 
         <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
-          <div class="card border-width mb-2">
-            <img class="card-img-top" src="Images/Kit_Screen.png" alt="Card image cap">
+          <div class="card border-width">
+            <img class="card-img-top" src="Images/ABCGroceryv2.png" alt="Card image cap">
           <div class="card-body">
-            <p class="card-title pictureTitle">Meal Kit Options</p>
-              <p class="card-text picture">Weeks 2-4 consisted of designing an e-commerce platform for ABC Grocery.  This included identifying a premium feature for the first version.</p>
-              <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            <!-- <p class="card-title pictureTitle">Meal Kit Options</p> -->
+              <p class="card-text picture">Part of a team project that involved the design of an e-commerce platform and premium feature for ABC Grocery. The development of a prototype and user testing were used.</p>
+            <div class="row my-auto mx-auto">
+              <div class="mx-auto">
+                <a href="#" class="btn btn-primary Readbtn">Read More</a>
+              </div>
+            </div>
             </div>
           </div>
           <!-- <div class="border my-auto"> -->
-            <div class="card border-width">
-              <img class="card-img-top" src="Images/Ready-to-Eat.png" alt="Card image cap">
+            <!-- <div class="card border-width">
+              <img class="card-img-top" src="Images/ABCGroceryv1.png" alt="Card image cap">
             <div class="card-body">
               <p class="card-title pictureTitle">Order Screen</p>
                 <p class="card-text picture">The ready-to-eat meal ordering screen was designed to mimic ABC's premium image. The wine pairing options received good reviews during preliminary prototype testing.</p>
@@ -111,18 +115,18 @@
                 </div>
               </div>
               </div>
-            </div>
+            </div> -->
           <!-- </div> -->
         </div>
 
         <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
-          <div class="card border-width mb-2">
+          <!-- <div class="card border-width mb-2">
             <img class="card-img-top" src="Images/X-Culture.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-title pictureTitle">X-Culture Home Screen</p>
               <p class="card-text picture">Redesigned home screen for X-Culture.org. Simplified navigation for multiple stakeholders.</p>
             </div>
-          </div>
+          </div> -->
           <!-- <div class="card" style="width: 18rem; border-width: 10px">
             <img class="card-img-top" src="Images/BusinessPage.png" alt="Card image cap">
           <div class="card-body">
@@ -132,13 +136,13 @@
           </div>
           <br /> -->
             <div class="card border-width">
-              <img class="card-img-top" src="Images/Donate.png" alt="Card image cap">
+              <img class="card-img-top" src="Images/X-Culturev1.png" alt="Card image cap">
             <div class="card-body">
-              <p class="card-title pictureTitle">Donation Page</p>
-                <p class="card-text picture">Redesigned the donation function. Placed content information on multiple screens to reduce the appearance of excessive content.</p>
+              <!-- <p class="card-title pictureTitle">Donation Page</p> -->
+                <p class="card-text picture">This is the redesign of the home page for X-Culture.org based on research.  It also includes a new donation page, which focuses on using simplicity.</p>
               <div class="row my-auto mx-auto">
                 <div class="mx-auto">
-                  <a href="https://medium.com/@sherryandre/learning-lessons-obtained-during-a-4-week-make-that-5-week-ux-ui-design-project-3d675aa04f9c" target="blank"class="btn btn-primary">Read More</a>
+                  <a href="https://medium.com/@sherryandre/learning-lessons-obtained-during-a-4-week-make-that-5-week-ux-ui-design-project-3d675aa04f9c" target="blank"class="btn btn-primary Readbtn">Read More</a>
                 </div>
               </div>
               </div>
@@ -146,7 +150,7 @@
         </div>
       </div>
 
-      <div class="row parallax" id="Grass">
+      <div class="row parallax" id="Mac">
           <div class="col-6 my-auto mx-auto">
               <h2 class="text3" id="Skills">
                 Skills
@@ -293,7 +297,8 @@
 			</div>
 			<div class="contact-section">
 			<div class="container">
-				<form>
+				<form action="https://formspree.io/sherryandre@gmail.com"
+      method="POST">
 					<div class="col-md-6 form-line">
 			  			<div class="form-group">
 			  				<label for="exampleInputUsername">Your name</label>
@@ -301,7 +306,7 @@
 				  		</div>
 				  		<div class="form-group">
 					    	<label for="exampleInputEmail">Email Address</label>
-					    	<input type="email" class="form-control" id="exampleInputEmail" placeholder=" Enter Email Address">
+					    	<input type="email" name="_replyto" class="form-control" id="exampleInputEmail" placeholder=" Enter Email Address">
 					  	</div>
 					  	<div class="form-group">
 					    	<label for="telephone">Phone Number</label>
@@ -315,14 +320,16 @@
 			  			</div>
 			  			<div>
 
-			  				<button type="button"  class="btn btn-default submit text-center">
+			  				<!-- <button type="button" class="btn btn-default submit text-center"> -->
+                <div class= class="my-right">
+                   <input type="submit" value="Send">
                   <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
-
+<!--
                   Send Message
 
-                </button>
-			  			</div>
-
+                </button> -->
+              </div>
+            </div>
 					</div>
 				</form>
 			</div>
