--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </title>
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-light bg-faded">
+    <nav class="navbar sticky-top navbar-light bg-faded topbar">
       <a class="navbar-brand" href="#"></a>
-      <ul class="across">
+      <ul class="across navtext">
         <li>
           <a href="#About">
             About
@@ -95,7 +95,7 @@
             <img class="card-img-top" src="Images/ABCGroceryv2.png" alt="Card image cap">
           <div class="card-body">
             <!-- <p class="card-title pictureTitle">Meal Kit Options</p> -->
-              <p class="card-text picture">Part of a team project that involved the design of an e-commerce platform and premium feature for ABC Grocery. The development of a prototype and user testing were used.</p>
+              <p class="card-text picture">Part of a team project that involved the design of an e-commerce platform and premium feature for ABC Grocery.</p>
             <div class="row my-auto mx-auto">
               <div class="mx-auto">
                 <a href="#" class="btn btn-primary Readbtn">Read More</a>
@@ -321,7 +321,7 @@
 			  			<div>
 
 			  				<!-- <button type="button" class="btn btn-default submit text-center"> -->
-                <div class= class="my-right">
+                <div class="my-right">
                    <input type="submit" value="Send">
                   <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
 <!--
