--- a/index.html
+++ b/index.html
@@ -310,13 +310,13 @@
 					  	</div>
 					  	<div class="form-group">
 					    	<label for="telephone">Phone Number</label>
-					    	<input type="tel" class="form-control" id="telephone" placeholder=" Enter 10-digit Phone Number">
+					    	<input type="tel" name="phone_number" class="form-control" id="telephone" placeholder=" Enter 10-digit Phone Number">
 			  			</div>
 			  		</div>
 			  		<div class="col-md-6">
 			  			<div class="form-group">
-			  				<label for ="description"> Message</label>
-			  			 	<textarea  class="form-control" id="description" placeholder="Enter Your Message"></textarea>
+			  				<label for="description"> Message</label>
+			  			 	<textarea name="_body" class="form-control" id="description" placeholder="Enter Your Message"></textarea>
 			  			</div>
 			  			<div>
 
