--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="col-12 col-md-6 my-auto mx-auto">
           <div class="row">
             <div class="col-4 col-md-2">
-              <div style="font-size: 6rem">
+              <div style="font-size: 4rem">
                 <i class="fa fa-quote-left">
                 </i>
               </div>
@@ -274,7 +274,7 @@
               </p>
             </div>
             <div class="col-4 col-md-2 mt-auto">
-              <div style="font-size: 6rem;">
+              <div style="font-size: 4rem;">
                 <i class="fa fa-quote-right">
                 </i>
               </div>
@@ -302,7 +302,7 @@
 					<div class="col-md-6 form-line">
 			  			<div class="form-group">
 			  				<label for="exampleInputUsername">Your name</label>
-					    	<input type="text" class="form-control" id="" placeholder=" Enter Name">
+					    	<input type="text" name="name" class="form-control" id="" placeholder=" Enter Name">
 				  		</div>
 				  		<div class="form-group">
 					    	<label for="exampleInputEmail">Email Address</label>
