--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="col-12 col-md-6 my-auto mx-auto">
           <div class="row">
             <div class="col-4 col-md-2">
-              <div style="font-size: 4rem">
+              <div style="font-size: 2rem right">
                 <i class="fa fa-quote-left">
                 </i>
               </div>
@@ -274,7 +274,7 @@
               </p>
             </div>
             <div class="col-4 col-md-2 mt-auto">
-              <div style="font-size: 4rem;">
+              <div style="font-size: 2rem;">
                 <i class="fa fa-quote-right">
                 </i>
               </div>
