--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
         </div>
         <div class="col-12 col-md-6 my-auto mx-auto">
           <div class="row">
-            <div class="col-4 col-md-2">
-              <div style="font-size: 2rem right;">
+            <div class="col-4 col-md-2 right">
+              <div style="font-size: 2rem;">
                 <i class="fa fa-quote-left">
                 </i>
               </div>
