--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </div>
         <div class="col-12 col-md-6 my-auto mx-auto">
           <div class="row">
-            <div class="col-4 col-md-2 right">
+            <div class="col-4 col-md-2">
               <div style="font-size: 2rem;">
                 <i class="fa fa-quote-left">
                 </i>
