--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     </title>
   </head>
   <body>
+    <!-- <h3 class="text6 topbar">
+      Portfolio for:  SHERRY ANDRE
+    </h3> -->
     <nav class="navbar sticky-top navbar-light bg-faded topbar">
       <a class="navbar-brand" href="#"></a>
       <ul class="across navtext">
@@ -40,13 +43,17 @@
       <div class="row justify-content-md-center">
         <header>
           <h1 class="text">
-            <br />
+
             UX/UI DESIGN
           </h1>
-          <br />
-          <h3 class="text">
-            Results oriented. User focused.
+
+          <h3 class="textA" id="Projects">
+            SHERRY ANDRE's Portfolio
           </h3>
+
+          <h5 class="textB">
+            Results oriented.  User focused.
+          </h5>
         </header>
       </div>
     </div>
@@ -83,7 +90,8 @@
                   <p class="card-text picture">First team design project completed during an Ironhack UX/UI bootcamp.  The design structure was developed from the use of a Gooble Design Sprint.</p>
                 <div class="row my-auto mx-auto">
                 <div class="mx-auto">
-                  <a href="#" class="btn btn-primary Readbtn">Read More</a>
+                  <a href="https://medium.com/@sherryandre/week-1-of-a-ux-ui-boot-camp-google-sprints-c44a5fef2020" target="blank"class="btn btn-primary Readbtn">Read More</a>
+                  <!-- <a href="#" class="btn btn-primary Readbtn">Read More</a> -->
                 </div>
               </div>
             </div>
@@ -95,10 +103,11 @@
             <img class="card-img-top" src="Images/ABCGroceryv2.png" alt="Card image cap">
           <div class="card-body">
             <!-- <p class="card-title pictureTitle">Meal Kit Options</p> -->
-              <p class="card-text picture">Part of a team project that involved the design of an e-commerce platform and premium feature for ABC Grocery.</p>
+              <p class="card-text picture">This was a team project to design an e-commerce platform and premium feature for ABC Grocery. Platform selection and MPV feature were based on user research.</p>
             <div class="row my-auto mx-auto">
               <div class="mx-auto">
-                <a href="#" class="btn btn-primary Readbtn">Read More</a>
+                <a href="https://medium.com/@sherryandre/learning-lessons-obtained-during-a-4-week-make-that-5-week-ux-ui-design-project-3d675aa04f9c" target="blank"class="btn btn-primary Readbtn">Read More</a>
+                <!-- <a href="#" class="btn btn-primary Readbtn">Read More</a> -->
               </div>
             </div>
             </div>
@@ -141,7 +150,7 @@
               <!-- <p class="card-title pictureTitle">Donation Page</p> -->
                 <p class="card-text picture">This is the redesign of the home page for X-Culture.org based on research.  It also includes a new donation page, which focuses on using simplicity.</p>
               <div class="row my-auto mx-auto">
-                <div class="mx-auto">
+                <div class="mx-auto" id="Skills">
                   <a href="https://medium.com/@sherryandre/learning-lessons-obtained-during-a-4-week-make-that-5-week-ux-ui-design-project-3d675aa04f9c" target="blank"class="btn btn-primary Readbtn">Read More</a>
                 </div>
               </div>
@@ -152,8 +161,8 @@
 
       <div class="row parallax" id="Mac">
           <div class="col-6 my-auto mx-auto">
-              <h2 class="text3" id="Skills">
-                Skills
+              <h2 class="text3">
+                SKILLS
               </h2>
           </div>
           <div class="col-6 text4 my-auto mx-auto">
@@ -177,7 +186,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-6">
+              <div class="col-6" id="About">
                 <ul>
                   <li>
                     UX/UI Design
@@ -253,8 +262,8 @@
 
       <div class="row RowHeight">
         <div class="col-12 col-md-6 my-auto mx-auto">
-          <h2 class="text3A" id="About">
-            About
+          <h2 class="text3A">
+            ABOUT
           </h2>
         </div>
         <div class="col-12 col-md-6 my-auto mx-auto">
@@ -267,7 +276,7 @@
             </div>
             <div class="col-4 col-md-8">
               <p class="text5">
-                I’ve worked within mutiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book, and left higher education to pursue a career in technology and UX/UI design.
+                I have worked within mutiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book, and left higher education to pursue a career in technology and UX/UI design.
                 <br />
                 <br />
                 I am a strong advocate for collaborative initiatives, education and team development.  I especially have a passion for the startup community.
@@ -313,7 +322,7 @@
 					    	<input type="tel" name="phone_number" class="form-control" id="telephone" placeholder=" Enter 10-digit Phone Number">
 			  			</div>
 			  		</div>
-			  		<div class="col-md-6">
+			  		<div class="col-md-6 form-line">
 			  			<div class="form-group">
 			  				<label for="description"> Message</label>
 			  			 	<textarea name="_body" class="form-control" id="description" placeholder="Enter Your Message"></textarea>
