--- a/index.html
+++ b/index.html
@@ -276,7 +276,12 @@
             </div>
             <div class="col-4 col-md-8">
               <p class="text5">
-                I have worked within mutiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book, and left higher education to pursue a career in technology and UX/UI design.
+                I have worked within mutiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my
+                <a href="https://www.amazon.com/Anything-Possible-Sherry-Andre/dp/1543906915/ref=sr_1_fkmr0_1?ie=UTF8&qid=1507473489&sr=8-1-fkmr0&keywords=anything+is+possible+sperry+andre" target="blank">
+
+
+                first book</a>
+                and left higher education to pursue a career in technology and UX/UI design.
                 <br />
                 <br />
                 I am a strong advocate for collaborative initiatives, education and team development.  I especially have a passion for the startup community.
