--- a/index.html
+++ b/index.html
@@ -330,12 +330,13 @@
 					    	<input type="tel" name="phone_number" class="form-control" id="telephone" placeholder=" Enter 10-digit Phone Number">
 			  			</div>
 			  		</div>
+
 			  		<div class="col-md-6 form-line">
 			  			<div class="form-group">
 			  				<label for="description"> Message</label>
 			  			 	<textarea name="_body" class="form-control" id="description" placeholder="Enter Your Message"></textarea>
 			  			</div>
-			  			<div>
+
 
 			  				<!-- <button type="button" class="btn btn-default submit text-center"> -->
                 <div class="my-right">
@@ -351,7 +352,14 @@
 				</form>
 			</div>
 		</section>
-      </div>
+    </div>
+    <div class="row footer mx-auto">
+      <p class=" col-12 textC">
+        <br />
+        Sherry Andre | Miami, FL
+      <br / />
+        Website designed by:  Sherry Andre
+      </p>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
