--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <h3 class="text6 topbar">
       Portfolio for:  SHERRY ANDRE
     </h3> -->
-    <nav class="navbar sticky-top navbar-light bg-faded topbar my-auto">
+    <nav class="navbar sticky-top navbar-light bg-faded topbar my-auto mx-auto">
       <a class="navbar-brand" href="#"></a>
       <ul class="across navtext">
         <li>
