--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@
         </div>
       </div>
 
+      <!-- <div class="row">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img src="..." alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img src="..." alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div> -->
+
+
+
+
+
+
 
       <div class="row RowHeight my-auto mx-auto">
         <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
@@ -276,7 +305,7 @@
             </div>
             <div class="col-4 col-md-8">
               <p class="text5">
-                I have worked within mutiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book,
+                I have worked within muLtiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book,
                 <a href="https://www.amazon.com/Anything-Possible-Sherry-Andre/dp/1543906915/ref=sr_1_fkmr0_1?ie=UTF8&qid=1507473489&sr=8-1-fkmr0&keywords=anything+is+possible+sperry+andre" target="blank">
 
 
