--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </div>
             <div class="col-4 col-md-8">
               <p class="text5">
-                I have worked within muLtiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book,
+                I have worked within multiple disciplines including education, professional sports, hospitality, and sales and marketing. I recently released my first book,
                 <a href="https://www.amazon.com/Anything-Possible-Sherry-Andre/dp/1543906915/ref=sr_1_fkmr0_1?ie=UTF8&qid=1507473489&sr=8-1-fkmr0&keywords=anything+is+possible+sperry+andre" target="blank">
 
 
