--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </h1>
 
           <h3 class="textA" id="Projects">
-            SHERRY ANDRE's Portfolio
+            <a href="Documents/S.Andre_Resume.pdf">Sherry Andre</a>
           </h3>
 
           <h5 class="textB">
@@ -113,13 +113,13 @@
             </div>
           </div> -->
             <div class="card border-width">
-              <img class="card-img-top" src="Images/BBv2.png" alt="Card image cap">
+              <img class="card-img-top" src="Images/Final Projectv1.png" alt="Card image cap">
                 <div class="card-body">
               <!-- <p class="card-title pictureTitle">Delivery</p> -->
-                  <p class="card-text picture">First team design project completed during an Ironhack UX/UI bootcamp.  The design structure was developed from the use of a Gooble Design Sprint.</p>
+                  <p class="card-text picture">Web-based app design to connect startups with professional service providers.</p>
                 <div class="row my-auto mx-auto">
                 <div class="mx-auto">
-                  <a href="https://medium.com/@sherryandre/week-1-of-a-ux-ui-boot-camp-google-sprints-c44a5fef2020" target="blank"class="btn btn-primary Readbtn">Read More</a>
+                  <a href="https://medium.com/@sherryandre/the-end-of-the-beginning-d6358f3599cb" target="blank"class="btn btn-primary Readbtn">Read More</a>
                   <!-- <a href="#" class="btn btn-primary Readbtn">Read More</a> -->
                 </div>
               </div>
@@ -129,10 +129,10 @@
 
         <div class="col-md-4 mx-auto px-md-5 px-2 py-5">
           <div class="card border-width">
-            <img class="card-img-top" src="Images/ABCGroceryv2.png" alt="Card image cap">
+            <img class="card-img-top" src="Images/ABCv2.png" alt="Card image cap">
           <div class="card-body">
             <!-- <p class="card-title pictureTitle">Meal Kit Options</p> -->
-              <p class="card-text picture">This was a team project to design an e-commerce platform and premium feature for ABC Grocery. Platform selection and MPV feature were based on user research.</p>
+              <p class="card-text picture">Design of e-commerce platform with a premium feature for ABC Grocery.</p>
             <div class="row my-auto mx-auto">
               <div class="mx-auto">
                 <a href="https://medium.com/@sherryandre/learning-lessons-obtained-during-a-4-week-make-that-5-week-ux-ui-design-project-3d675aa04f9c" target="blank"class="btn btn-primary Readbtn">Read More</a>
@@ -174,10 +174,10 @@
           </div>
           <br /> -->
             <div class="card border-width">
-              <img class="card-img-top" src="Images/X-Culturev2.png" alt="Card image cap">
+              <img class="card-img-top" src="Images/X-culturev3.png" alt="Card image cap">
             <div class="card-body">
               <!-- <p class="card-title pictureTitle">Donation Page</p> -->
-                <p class="card-text picture">This is the redesign of the home page for X-Culture.org based on research.  It also includes a new donation page, which focuses on using simplicity.</p>
+                <p class="card-text picture">The redesign of X-Culture's home page.  It also included a new donation page.</p>
               <div class="row my-auto mx-auto">
                 <div class="mx-auto" id="Skills">
                   <a href="https://medium.com/@sherryandre/learning-lessons-obtained-during-a-4-week-make-that-5-week-ux-ui-design-project-3d675aa04f9c" target="blank"class="btn btn-primary Readbtn">Read More</a>
