--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </h1>
 
           <h3 class="textA" id="Projects">
-            <a href="Documents/S.Andre_Resume.pdf">Sherry Andre</a>
+            <a href="Documents/SherryAndre.pdf" target="blank">Sherry Andre</a>
           </h3>
 
           <h5 class="textB">
